attempt at fixing pre white space

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -142,6 +142,7 @@ table.schedule
         width: 520px
         font-size: 14px
         pre
+          white-space: normal
           &.ruby
             background-color: $white !important
           &.console
